--- a/DisgnPattern/DisgnPattern/DisgnPattern.csproj
+++ b/DisgnPattern/DisgnPattern/DisgnPattern.csproj
@@ -49,10 +49,12 @@
     <Compile Include="Product\PrototypePattern.cs" />
     <Compile Include="Product\SimpleFactory.cs" />
     <Compile Include="Product\Singleton.cs" />
+    <Compile Include="Struct\AdapterPattern.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
