添加 装饰者模式和组合模式

--- a/DisgnPattern/DisgnPattern/DisgnPattern.csproj
+++ b/DisgnPattern/DisgnPattern/DisgnPattern.csproj
@@ -51,6 +51,8 @@
     <Compile Include="Product\Singleton.cs" />
     <Compile Include="Struct\AdapterPattern.cs" />
     <Compile Include="Struct\BridgePattern.cs" />
+    <Compile Include="Struct\CompositePattern.cs" />
+    <Compile Include="Struct\DecoratorPattern.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
