添加 外观模式、享元模式、代理模式

--- a/DisgnPattern/DisgnPattern/DisgnPattern.csproj
+++ b/DisgnPattern/DisgnPattern/DisgnPattern.csproj
@@ -53,6 +53,9 @@
     <Compile Include="Struct\BridgePattern.cs" />
     <Compile Include="Struct\CompositePattern.cs" />
     <Compile Include="Struct\DecoratorPattern.cs" />
+    <Compile Include="Struct\FacadePattern.cs" />
+    <Compile Include="Struct\FlyweightPattern.cs" />
+    <Compile Include="Struct\ProxyPattern.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
